# k3sx

./: .gitignore  README.md  cilium-values.yaml  kubeconfig.yaml  oauth-values.yaml  pyproject.toml  setup-testing.ipynb  setup.ipynb
chart/: Chart.yaml  values.yaml
chart/templates/: argocd.yaml  authentik.yaml  cert-manager.yaml  cilium-authproxy.yaml  cilium.yaml  cluster-issuer.yaml  contour.yaml  dex.yaml  external-dns.yaml  k3s-config.yaml  k8s-dashboard-authproxy.yaml  k8s-dashboard.yaml  longhorn-authproxy.yaml  longhorn.yaml  oauth2-proxy.yaml  repos.yaml  s3-secret.yaml
chart/templates/apps/: authentik.yaml  cert-manager.yaml  cilium.yaml  dex.yaml  external-dns.yaml  k8s-dashboard.yaml  longhorn.yaml  nginx-ingress.yaml  oauth2-proxy.yaml  weave-gitops.yaml
chart/templates/argocd/: argocd-certificate.yaml  argocd-cm.yaml  argocd-ingress.yaml  argocd-rbac-cm.yaml  argocd.yaml
chart/templates/config/: admin_rbac.yaml  repos.yaml
charts/bootstrap/cilium/: Chart.yaml  values.yaml
charts/bootstrap/longhorn/: Chart.yaml  values.yaml
charts/cert-manager/: Chart.yaml  values.yaml
charts/cert-manager/templates/: cluster-issuer.yaml
charts/crd-config/: Chart.yaml  values.yaml
charts/crd-config/templates/: backup-job.yaml  cluster-issuer.yaml
charts/k3sx/: values.yaml
charts/k3sx/templates/: admin-rbac.yaml  cert-manager.yaml  cilium.yaml  crd-config.yaml  external-dns.yaml  k3s-config.yaml  k8s-dashboard.yaml  kubeconfig-oidc.yaml  longhorn.yaml  nginx-ingress.yaml  (+4 more)
charts/main/: Chart.yaml  values.yaml
config/: 90-override.conf  k3s.yaml
(+36 files in other folders)
